# ray_tracing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  argparser.cpp  argparser.h  common.h  config.json  configuration.cpp  configuration.h  main.cpp
ray_tracer/: aabb.h  bvh_tree.cpp  bvh_tree.h  engine.cpp  engine.h  ggx.hpp  hittable.cpp  hittable.h  light_source.cpp  light_source.h  math.hpp  math_x86_64.asm  random.cpp  random.h  scene.cpp  scene.h  shared.h  util.h
ray_tracer/ecs/components/: camera_component.h  components.cpp  components.h  directional_light_component.h  fwdecl.h  hierarchy_component.h  mesh_component.h  point_light_component.h  spot_light_component.h  transform_component.h
ray_tracer/ecs/systems/: base_system.h  camera_system.cpp  camera_system.h  hierarchy_system.cpp  hierarchy_system.h  render_system.cpp  render_system.h  systems.h
ray_tracer/lib/: json.hpp  tiny_gltf.h
ray_tracer/lib/utility/: .gitmodules  CMakeLists.txt  base64.cpp  base64.h  threading.hpp  tiny_gltf.h  tinyobjloader.h  udetail.hpp  uparse.hpp  upattern.hpp  ureactive.hpp  utility.hpp  utime.hpp
ray_tracer/lib/utility/logger/: CMakeLists.txt  debugbreak.h  formatter.h  logger.cpp  logger.h
ray_tracer/lib/utility/logger/backward-cpp/: CMakeLists.txt
ray_tracer/lib/utility/logger/output/: OutputBase.cpp  OutputBase.h  OutputCOUT.cpp  OutputCOUT.h  OutputFile.cpp  OutputFile.h  OutputWinCmd.cpp  OutputWinCmd.h
ray_tracer/math/: mat2.hpp  mat2_math.hpp  mat3.hpp  mat3_math.hpp  mat4.hpp  mat4_math.hpp  mat_construct.hpp  math.hpp  math_template.hpp  quat.hpp  quat_math.hpp  share.hpp  vec2.hpp  vec2_math.hpp  vec2_simd.hpp  vec3.hpp  vec3_math.hpp  vec3_simd.hpp  vec4.hpp  vec4_math.hpp  vec4_simd.hpp  vec_construct.hpp  vector_base.hpp
ray_tracer/render/: framebuffer.cpp  framebuffer.h  integrator.cpp  integrator.cpp.backup  integrator.h  preview_session.cpp  preview_session.h  preview_window.cpp  preview_window.h  renderer.cpp  renderer.h  rsampler.cpp  rsampler.h  tonemapping.hpp
ray_tracer/resources/: bxdf.hpp  image.cpp  image.h  material.cpp  material.cpp.backup  material.h  material.h.backup  resource_container.hpp  resource_manager.cpp  resource_manager.h  sampler.cpp  sampler.h  vertex.h  vertex_buffer.cpp  vertex_buffer.h
